<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fehr.nanodegree.musicalstructure.activity.PaymentActivity">

    <TextView
        style="@style/TextView_For_Activity"
        android:text="@string/payment_name" />

    <TextView
        style="@style/TextView_to_describe_the_activity"
        android:text="@string/payment_description" />

    <Button
        android:id="@+id/buy_album_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/buy_album_1" />

    <Button
        android:id="@+id/buy_album_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/buy_album_2" />

    <Button
        android:id="@+id/media_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:text="@string/return_to_main" />

    <TextView
        style="@style/text_to_describe_the_library"
        android:text="@string/library_description" />

</LinearLayout>
