<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ToolbarTheme" />

    <TextView
        style="@style/TextView_For_Activity"
        android:text="@string/activity_nowplaying" />

    <TextView
        android:id="@+id/textview_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/action_activity_nowplaying"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_view_for_now_playing"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/textview_nowplaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_dimen"
        android:orientation="horizontal">

        <Button
            android:id="@+id/playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_playlist" />

        <Button
            android:id="@+id/artist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_artist" />

        <Button
            android:id="@+id/album_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_album" />

        <Button
            android:id="@+id/song_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_song" />

    </LinearLayout>

    <TextView
        style="@style/text_to_describe_the_library"
        android:text="@string/photo_loaded_using_bumptech_library" />
</LinearLayout>